# boticario

./: .env.example  .gitignore  README.md  pyproject.toml
boticario/: __init__.py  cli.py  logger.py
boticario/core/: __init__.py
boticario/core/app/: __init__.py  base_ingestion_task.py  base_table1_task.py  base_table2_task.py  base_table3_task.py  base_table4_task.py  spotify_data_hackers_extract_50_task.py  spotify_data_hackers_extract_full_task.py  spotify_table5_task.py  spotify_table6_task.py  spotify_table7_task.py  task.py
boticario/core/dao/: spotify_dao.py
boticario/core/dlo/: base_dlo.py  spotify_dlo.py
boticario/core/dpo/: base_dpo.py  spotify_dpo.py
boticario/core/helpers/: path.py  query.py
boticario/core/helpers/file_reader/: __init__.py  excel_reader.py  factory.py  reader.py
boticario/core/services/: database.py  s3.py  spotify_api.py
boticario/core/sql/: create_table1.sql  create_table2.sql  create_table3.sql  create_table4.sql  create_table5.sql  create_table6.sql  create_table7.sql  database_and_schemas_building.sql  load_parquet.sql
dags/: base_dag.py  spotify_dag.py
